--- a/package.json
+++ b/package.json
@@ -10,22 +10,29 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^0.26.0",
     "expo": "~52.0.20",
+    "expo-app-loading": "^2.1.1",
+    "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "formik": "^2.4.6",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-redux": "^7.1.34",
     "typescript": "^5.3.3"
   },
   "private": true
