--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "formik": "^2.4.6",
     "react": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-swipe-gestures": "^1.0.5",
+    "react-native-toast-message": "^2.2.1",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
-    "yup": "^1.6.1",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
