--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-toast-message": "^2.2.1",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "expo-image-picker": "~16.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
