--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "yup": "^1.6.1",
-    "expo-image-picker": "~16.0.3"
+    "expo-image-picker": "~16.0.3",
+    "expo-location": "~18.0.4",
+    "react-native-maps": "1.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
