--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "yup": "^1.6.1",
     "expo-image-picker": "~16.0.3",
     "expo-location": "~18.0.4",
-    "react-native-maps": "1.18.0"
+    "react-native-maps": "1.18.0",
+    "@react-native-community/datetimepicker": "8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
