--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/ngrok": "^4.1.0",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
@@ -19,6 +20,9 @@
     "axios": "^0.26.0",
     "expo": "~52.0.20",
     "expo-app-loading": "^2.1.1",
+    "expo-image-picker": "~16.0.3",
+    "expo-location": "~18.0.4",
+    "expo-notifications": "~0.29.12",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "formik": "^2.4.6",
@@ -26,6 +30,7 @@
     "react-native": "0.76.5",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
@@ -33,11 +38,7 @@
     "react-native-toast-message": "^2.2.1",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
-    "yup": "^1.6.1",
-    "expo-image-picker": "~16.0.3",
-    "expo-location": "~18.0.4",
-    "react-native-maps": "1.18.0",
-    "@react-native-community/datetimepicker": "8.2.0"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
